--- a/.github/workflows/prod_medical-office-manager.yml
+++ b/.github/workflows/prod_medical-office-manager.yml
@@ -28,7 +28,21 @@ jobs:
           source venv/bin/activate
       
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install -r medical_office_manager/requirements.txt
+
+      - name: Cleaning testing files
+        run: |
+          cd SEUPROJETODJANGO/
+          rm db.sqlite3
+          rm .env
+          cd ..
+
+      - name: Zip artifact for deployment
+        run: |
+          cd medical_office_manager/
+          zip release.zip ./* -r
+          cd ..
+          mv medical_office_manager/release.zip .
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
