--- a/.github/workflows/prod_medical-office-manager.yml
+++ b/.github/workflows/prod_medical-office-manager.yml
@@ -28,12 +28,30 @@ jobs:
           source venv/bin/activate
       
       - name: Install dependencies
-        run: pip install -r medical_office_manager/requirements.txt
+        run: |
+          cd medical_office_manager/
+          pip install -r medical_office_manager/requirements.txt
+          npm ci
+          cd ..
+
+      - name: Run local server
+        run: |
+          cd medical_office_manager/
+          python manage.py migrate
+          python manage.py runserver &
+          sleep 5
+          npx cypress run
 
       - name: Cleaning testing files
         run: |
           cd medical_office_manager/
+          rm .env
           rm db.sqlite3
+          rm cypress.config.js
+          rm package-lock.json
+          rm package.json
+          rm -rf cypress
+          rm -rf node_modules
           cd ..
 
       - name: Zip artifact for deployment
