--- a/.github/workflows/prod_medical-office-manager.yml
+++ b/.github/workflows/prod_medical-office-manager.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Install dependencies
         run: |
           cd medical_office_manager/
-          pip install -r medical_office_manager/requirements.txt
+          pip install -r requirements.txt
           npm ci
           cd ..
 
